template.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: CloudFormation template to create VPC, EC2, and S3 in ap-south-2

Resources:

  # VPC
  SolomanVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: soloman-cloudformation-vpc

  # Internet Gateway
  SolomanInternetGateway:
    Type: AWS::EC2::InternetGateway

  # Attach Internet Gateway to VPC
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref SolomanVPC
      InternetGatewayId: !Ref SolomanInternetGateway

  # Public Subnet
  SolomanPublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref SolomanVPC
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true
      AvailabilityZone: ap-south-2a
      Tags:
        - Key: Name
          Value: soloman-cloudformation-subnet

  # Route Table
  SolomanRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref SolomanVPC

  # Internet Route
  SolomanRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref SolomanRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref SolomanInternetGateway

  # Associate Route Table with Subnet
  SolomanSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref SolomanPublicSubnet
      RouteTableId: !Ref SolomanRouteTable

  # Security Group
  SolomanSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH and HTTP
      VpcId: !Ref SolomanVPC
      SecurityGroupIngress:

        # SSH Access
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

        # HTTP Access
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

  # EC2 Instance
  SolomanEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t3.micro

      # Amazon Linux 2023 AMI for ap-south-2
      ImageId: ami-0fd0ec892c8d13fc2
      SubnetId: !Ref SolomanPublicSubnet

      SecurityGroupIds:
        - !Ref SolomanSecurityGroup

      # Replace with your actual key pair name
      KeyName: solo

      Tags:
        - Key: Name
          Value: soloman-cloudformation-ec2

  # S3 Bucket
  SolomanS3Bucket:
    Type: AWS::S3::Bucket
    Properties:
      BucketName: soloman-cloudformation-s3-bucket-5872689

Outputs:

  InstanceId:
    Description: EC2 Instance ID
    Value: !Ref SolomanEC2Instance

  BucketName:
    Description: S3 Bucket Name
    Value: !Ref SolomanS3Bucket
